deployments/kubernetes/sag-cc/deployment.yml
###############################################################################
#  Copyright 2013 - 2018 Software AG, Darmstadt, Germany and/or its licensors
#
#   SPDX-License-Identifier: Apache-2.0
#
#     Licensed under the Apache License, Version 2.0 (the "License");
#     you may not use this file except in compliance with the License.
#     You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#     Unless required by applicable law or agreed to in writing, software
#     distributed under the License is distributed on an "AS IS" BASIS,
#     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#     See the License for the specific language governing permissions and
#     limitations under the License.                                                            
#
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-deployment
spec:
  selector:
    matchLabels:
      app: cc
  replicas: 1
  template:
    metadata:
      labels:
        app: cc
    spec:
      containers:
      - name: cc
        image: daerepository03.eur.ad.sag:4443/ccdevops/commandcentral-builder:10.3
        ports:
        - containerPort: 8091
