deployments/kubernetes/sag-cc/cc-ingress.yml
###############################################################################
#  Copyright 2013 - 2019 Software AG, Darmstadt, Germany and/or its licensors
#
#   SPDX-License-Identifier: Apache-2.0
#
#     Licensed under the Apache License, Version 2.0 (the "License");
#     you may not use this file except in compliance with the License.
#     You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#     Unless required by applicable law or agreed to in writing, software
#     distributed under the License is distributed on an "AS IS" BASIS,
#     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#     See the License for the specific language governing permissions and
#     limitations under the License.
#
###############################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  generation: 1
  name: cc-lb
  namespace: cc-namespace
spec:
  rules:
  # here the domain should be changed to what convenient   
  - host: cc.ninjacloud.eur.ad.sag
    http:
      paths:
      - backend:
          serviceName: cc
          servicePort: 8091
  tls:
  - hosts:
    # here the domain should be changed to what convenient   
    - cc.ninjacloud.eur.ad.sag
